--- a/mpv.conf
+++ b/mpv.conf
@@ -18,14 +18,14 @@ input-builtin-bindings = no
 hr-seek-framedrop = no
 
 save-position-on-quit = yes
-watch-later-dir = "~~/_cache/watch_later"
+# watch-later-dir = "~~/_cache/watch_later" # enable in Windows
 watch-later-options = start,vid,aid,sid,volume
 
 demuxer-max-bytes = 1024MiB
 demuxer-max-back-bytes = 512MiB
 
-icc-cache-dir = "~~/_cache/icc"
-gpu-shader-cache-dir = "~~/_cache/shader"
+# icc-cache-dir = "~~/_cache/icc" # enable in Windows
+# gpu-shader-cache-dir = "~~/_cache/shader" # enable in Windows
 
 ### osc
 # osc = no
@@ -35,8 +35,8 @@ osd-font-size = 24
 
 ### video
 vo = gpu-next
-gpu-context = winvk,d3d11,auto  # Windows
-# gpu-context = auto  # Linux
+# gpu-context = winvk,d3d11,auto  # Windows
+gpu-context = auto  # Linux
 hwdec = nvdec,auto-safe
 # hwdec = nvdec-copy,auto-copy-safe  # post vf
 hwdec-codecs = h264,hevc,vp8,vp9,av1
@@ -51,8 +51,8 @@ audio-file-auto = fuzzy
 
 ### subtitles
 sub-auto = exact
-sub-file-paths = sub;subtitles  # Windows
-# sub-file-paths = sub:subtitles  # Linux
+# sub-file-paths = sub;subtitles  # Windows
+sub-file-paths = sub:subtitles  # Linux
 slang = chs,sc,zh-cn,chi,zh,zh-tw,cht,zho,ze
 subs-fallback = yes
 
