fix: switch to linux

--- a/mpv.conf
+++ b/mpv.conf
@@ -4,7 +4,7 @@ msg-color = yes
 idle = once
 keep-open = yes
 taskbar-progress = no  # Windows only
-window-corners = default  # Windows only
+# window-corners = default  # Windows only
 border = no
 title-bar = no  # Windows and X11 only
 
