chore: update config

--- a/mpv.conf
+++ b/mpv.conf
@@ -3,10 +3,9 @@ terminal = yes
 msg-color = yes
 idle = once
 keep-open = yes
-taskbar-progress = no  # Windows only
-# window-corners = default  # Windows only
+taskbar-progress = no
 border = no
-title-bar = no  # Windows and X11 only
+title-bar = no
 
 monitoraspect = 16:9
 autofit-larger = 100%x100%
@@ -18,14 +17,10 @@ input-builtin-bindings = no
 hr-seek-framedrop = no
 
 save-position-on-quit = yes
-# watch-later-dir = "~~/_cache/watch_later" # enable in Windows
 watch-later-options = start,vid,aid,sid,volume
 
 demuxer-max-bytes = 1024MiB
 demuxer-max-back-bytes = 512MiB
-
-# icc-cache-dir = "~~/_cache/icc" # enable in Windows
-# gpu-shader-cache-dir = "~~/_cache/shader" # enable in Windows
 
 ### osc
 # osc = no
@@ -35,24 +30,24 @@ osd-font-size = 20
 
 ### video
 vo = gpu-next
-# gpu-context = winvk,d3d11,auto  # Windows
-gpu-context = auto  # Linux
+gpu-context = auto
 hwdec = nvdec,auto-safe
 # hwdec = nvdec-copy,auto-copy-safe  # post vf
 hwdec-codecs = h264,hevc,vp8,vp9,av1
 video-output-levels = full
 
 ### audio
-ao = wasapi,jack,pipewire,alsa
+# ao = jack,pipewire,alsa
+ao = pipewire,alsa
 volume = 100
 volume-max = 130
 audio-channels = auto-safe
+# audio-channels = auto
 audio-file-auto = fuzzy
 
 ### subtitles
 sub-auto = exact
-# sub-file-paths = sub;subtitles  # Windows
-sub-file-paths = sub:subtitles  # Linux
+sub-file-paths = sub:subtitles
 slang = chs,sc,zh-cn,chi,zh,zh-tw,cht,zho,ze
 subs-fallback = yes
 
